--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.10",
     "flowbite-react": "^0.7.3",
+    "formik": "^2.4.5",
     "framer-motion": "^11.0.14",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-data-table-component": "^7.6.2",
+    "react-dom": "^18",
+    "styled-components": "^6.1.8",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
